{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 20,
  "lineage": "48619fd5-b00f-743d-88bc-ddaca10d88ad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ac4dfaf1c5c0cce9",
            "arn": "arn:aws:ec2:us-east-1:051826720012:instance/i-0a50c94895704759d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a50c94895704759d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vpckeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0667555367c862cf1",
            "private_dns": "ip-10-0-1-64.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.64",
            "public_dns": "ec2-34-201-141-217.compute-1.amazonaws.com",
            "public_ip": "34.201.141.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-044ee988d9ebefbdc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06d66f7b077283b6f",
            "tags": {
              "Name": "webserver"
            },
            "tags_all": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cff1712f5105f130"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-web",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_subnet.public-subnet-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826720012:internet-gateway/igw-08d9ccf73982dca06",
            "id": "igw-08d9ccf73982dca06",
            "owner_id": "051826720012",
            "tags": {
              "Name": "igw-vpc-dev-us-east-1",
              "environment": "dev",
              "owner": "aravetiamulya@gmail.com"
            },
            "tags_all": {
              "Name": "igw-vpc-dev-us-east-1",
              "environment": "dev",
              "owner": "aravetiamulya@gmail.com"
            },
            "vpc_id": "vpc-0644ba815513add58"
          },
          "dependencies": [
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826720012:route-table/rtb-024d7845f97aa2375",
            "id": "rtb-024d7845f97aa2375",
            "owner_id": "051826720012",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08d9ccf73982dca06",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "web-pub-rt-us-east-1",
              "environment": "dev",
              "owner": "aravetiamulya@gmail.com"
            },
            "tags_all": {
              "Name": "web-pub-rt-us-east-1",
              "environment": "dev",
              "owner": "aravetiamulya@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0644ba815513add58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt-assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021d8d0c0fba7541b",
            "route_table_id": "rtb-024d7845f97aa2375",
            "subnet_id": "subnet-06d66f7b077283b6f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.web-public-rt",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt-assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5e5da787f4827ac",
            "route_table_id": "rtb-024d7845f97aa2375",
            "subnet_id": "subnet-07a8b3ee1caa1cb7f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.web-public-rt",
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt-assoc_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b60129dec7284c06",
            "route_table_id": "rtb-024d7845f97aa2375",
            "subnet_id": "subnet-09ae91bdf1923cd74"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.web-public-rt",
            "aws_subnet.public-subnet-3",
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826720012:security-group/sg-07ffc0ab5e6eda1c6",
            "description": "Allow traffic from public subnets",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ffc0ab5e6eda1c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-sg-private-sg-pub",
            "name_prefix": "",
            "owner_id": "051826720012",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-sg-private-pub",
              "application": "Demo App"
            },
            "tags_all": {
              "Name": "dev-sg-private-pub",
              "application": "Demo App"
            },
            "timeouts": null,
            "vpc_id": "vpc-0644ba815513add58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_subnet.public-subnet-3",
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826720012:security-group/sg-0cff1712f5105f130",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cff1712f5105f130",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-sg-public-sg-web",
            "name_prefix": "",
            "owner_id": "051826720012",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server SG",
              "application": "Demo App"
            },
            "tags_all": {
              "Name": "Web Server SG",
              "application": "Demo App"
            },
            "timeouts": null,
            "vpc_id": "vpc-0644ba815513add58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826720012:subnet/subnet-0174943080c0b3368",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0174943080c0b3368",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "051826720012",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-pr-sb-us-east-1a",
              "environment": "dev",
              "owner": "aravetiamulya@gmail.com"
            },
            "tags_all": {
              "Name": "dev-pr-sb-us-east-1a",
              "environment": "dev",
              "owner": "aravetiamulya@gmail.com"
            },
            "vpc_id": "vpc-0644ba815513add58"
          },
          "dependencies": [
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826720012:subnet/subnet-02775f2a05f85ff1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02775f2a05f85ff1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "051826720012",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-pr-sb-us-east-1b",
              "environment": "dev",
              "owner": "aravetiamulya@gmail.com"
            },
            "tags_all": {
              "Name": "dev-pr-sb-us-east-1b",
              "environment": "dev",
              "owner": "aravetiamulya@gmail.com"
            },
            "vpc_id": "vpc-0644ba815513add58"
          },
          "dependencies": [
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826720012:subnet/subnet-0bb34abb6d6ce66a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb34abb6d6ce66a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "051826720012",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-pr-sb-us-east-1c",
              "environment": "dev",
              "owner": "aravetiamulya@gmail.com"
            },
            "tags_all": {
              "Name": "dev-pr-sb-us-east-1c",
              "environment": "dev",
              "owner": "aravetiamulya@gmail.com"
            },
            "vpc_id": "vpc-0644ba815513add58"
          },
          "dependencies": [
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826720012:subnet/subnet-06d66f7b077283b6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d66f7b077283b6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "051826720012",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-pb-sb-us-east-1a",
              "environment": "dev",
              "owner": "aravetiamulya@gmail.com"
            },
            "tags_all": {
              "Name": "dev-pb-sb-us-east-1a",
              "environment": "dev",
              "owner": "aravetiamulya@gmail.com"
            },
            "vpc_id": "vpc-0644ba815513add58"
          },
          "dependencies": [
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826720012:subnet/subnet-07a8b3ee1caa1cb7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a8b3ee1caa1cb7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "051826720012",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-pb-sb-us-east-1b",
              "environment": "dev",
              "owner": "aravetiamulya@gmail.com"
            },
            "tags_all": {
              "Name": "dev-pb-sb-us-east-1b",
              "environment": "dev",
              "owner": "aravetiamulya@gmail.com"
            },
            "vpc_id": "vpc-0644ba815513add58"
          },
          "dependencies": [
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826720012:subnet/subnet-09ae91bdf1923cd74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ae91bdf1923cd74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "051826720012",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-pb-sb-us-east-1c",
              "environment": "dev",
              "owner": "aravetiamulya@gmail.com"
            },
            "tags_all": {
              "Name": "dev-pb-sb-us-east-1c",
              "environment": "dev",
              "owner": "aravetiamulya@gmail.com"
            },
            "vpc_id": "vpc-0644ba815513add58"
          },
          "dependencies": [
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051826720012:vpc/vpc-0644ba815513add58",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cc602a86f6c84c77",
            "default_route_table_id": "rtb-0d7790e466bf281d3",
            "default_security_group_id": "sg-0259bd662d9e89581",
            "dhcp_options_id": "dopt-0a168f0fee7d25551",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0644ba815513add58",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d7790e466bf281d3",
            "owner_id": "051826720012",
            "tags": {
              "Name": "vpc-dev-us-east-1",
              "environment": "dev",
              "owner": "aravetiamulya@gmail.com"
            },
            "tags_all": {
              "Name": "vpc-dev-us-east-1",
              "environment": "dev",
              "owner": "aravetiamulya@gmail.com"
            }
          }
        }
      ]
    }
  ]
}